--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  icons_launcher: ^1.2.1
 
 flutter:
   uses-material-design: true
@@ -34,3 +35,12 @@ flutter:
     - backend/kjv.json
     - backend/web.json
     - backend/ylt.json
+
+flutter_icons:
+  image_path: "assets/images/icon.jpg"
+  android: true
+  ios: true
+  macos: true
+  windows: true
+  linux: true
+  web: true
