--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^1.0.4
+  google_mobile_ads: ^1.3.0
   hive: ^2.2.2
   hive_flutter: ^1.1.0
   screen_brightness: ^0.2.1
